fix the dark theme bgColor issue with overflow, change div to flex in contentComp, fixes to index.css

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,4 @@ body, html, #root {
   height: 100%;
   place-items: center;
   place-content: center;
-  background-color: black;
-    
 }
